--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <title>My Techfolio</title>
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Header / Navbar -->
   <header>
-    <h1>My Portfolio</h1>
+    <h1>My Techfolio</h1>
     <nav>
       <a href="#home">Home</a>
       <a href="#about">About</a>
