--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </section>
 
   <footer>
-    <p>© 2025 [Your Name]. All rights reserved.</p>
+    <p>© 2025 Prineet Kaur. All rights reserved.</p>
   </footer>
 </body>
 </html>
