--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact Me</h2>
-    <p>Email me at <a href="mailto:yourname@example.com">yourname@example.com</a></p>
+    <p>Email me at <a href="mailto:bhurji.pk@gmail.com">bhurji.pk@gmail.com</a></p>
   </section>
 
   <footer>
