--- a/index.html
+++ b/index.html
@@ -1,64 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Techfolio</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
+  <meta name="theme-color" content="#ff6fa3" />
 </head>
 <body>
-  <!-- Header / Navbar -->
-  <header>
-    <h1>My Techfolio</h1>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
+
+  <!-- Left Sidebar -->
+  <aside class="sidebar" id="sidebar">
+    <div class="profile">
+      <img src="/mnt/data/IMG_08073383-CCFA-4DAF-9262-942F063BFCA2.jpeg" alt="Profile" />
+      <h2>Prineet Kaur</h2>
+      <p class="role">Technical Product Enabler and Communicator</p>
+    </div>
+
+    <nav class="nav">
+      <a href="#home" class="nav-link active">Home</a>
+      <a href="#about" class="nav-link">About</a>
+      <a href="#resume" class="nav-link">Resume</a>
+      <a href="#skills" class="nav-link">Skills</a>
+      <a href="#projects" class="nav-link">Projects</a>
+      <a href="#blogs" class="nav-link">Blogs</a>
+      <a href="#contact" class="nav-link">Contact</a>
     </nav>
-  </header>
 
-  <!-- Home Section -->
-  <section id="home">
-    <div class="intro">
-      <h2>Hi, I'm [Your Name]</h2>
-      <p>Front-end Developer • Designer • Problem Solver</p>
+    <div class="sidebar-footer">
+      <small>© <span id="year"></span> Prineet Kaur</small>
     </div>
-  </section>
+  </aside>
 
-  <!-- About Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      I'm a passionate developer who loves creating beautiful, responsive websites.
-      I enjoy turning ideas into digital experiences.
-    </p>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project-grid">
-      <div class="project-card">
-        <h3>Project One</h3>
-        <p>A brief description of your project goes here.</p>
+  <!-- Main content (right side) -->
+  <main class="main">
+    <!-- Hero / Home -->
+    <section id="home" class="hero">
+      <div class="hero-left">
+        <h1 class="name">Hi, I'm <span class="accent">Prineet</span></h1>
+        <h2 class="typing">I'm a <span id="typed"></span><span class="cursor">|</span></h2>
+        <p class="hero-desc">I create beautiful, responsive websites and delightful user experiences.</p>
+        <div class="hero-ctas">
+          <a class="btn" href="#projects">View Projects</a>
+          <a class="btn-outline" href="#contact">Contact Me</a>
+        </div>
       </div>
-      <div class="project-card">
-        <h3>Project Two</h3>
-        <p>Another cool project you’ve worked on.</p>
+      <div class="hero-right">
+        <!-- background photo shows via CSS using the same image; also include small overlay -->
+        <div class="photo-credit">Photo placeholder</div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email me at <a href="mailto:bhurji.pk@gmail.com">bhurji.pk@gmail.com</a></p>
-  </section>
+    <!-- About -->
+    <section id="about" class="section">
+      <h2 class="section-title">About</h2>
+      <div class="two-col">
+        <div>
+          <p>
+            Hello! I'm Prineet — a frontend developer with a love for clean design, accessibility, and performance.
+            I enjoy turning ideas into pixel-perfect, fast interfaces.
+          </p>
+          <ul>
+            <li>Location: London, UK</li>
+            <li>Availability: Open to work</li>
+            <li>Interests: UI design, animations, UX research</li>
+          </ul>
+        </div>
+        <div class="about-img">
+          <img src="/mnt/data/IMG_08073383-CCFA-4DAF-9262-942F063BFCA2.jpeg" alt="About image" />
+        </div>
+      </div>
+    </section>
 
-  <footer>
-    <p>© 2025 Prineet Kaur. All rights reserved.</p>
-  </footer>
+    <!-- Resume -->
+    <section id="resume" class="section">
+      <h2 class="section-title">Resume</h2>
+      <div class="resume-grid">
+        <div class="resume-item">
+          <h3>Frontend Developer — Awesome Studio</h3>
+          <span class="muted">2022 — Present</span>
+          <p>Built interactive web apps using React, optimized performance, and improved conversion by 20%.</p>
+        </div>
+        <div class="resume-item">
+          <h3>Web Developer — Creative Agency</h3>
+          <span class="muted">2020 — 2022</span>
+          <p>Worked on responsive marketing sites and accessible components for enterprise clients.</p>
+        </div>
+        <div class="resume-item">
+          <h3>BSc Computer Science — University</h3>
+          <span class="muted">2017 — 2020</span>
+          <p>Graduated with First Class honours. Focus on web technologies and human-computer interaction.</p>
+        </div>
+      </div>
+      <a class="btn" href="#" download="PrineetKaur-Resume.pdf">Download Resume (sample)</a>
+    </section>
+
+    <!-- Skills -->
+    <section id="skills" class="section">
+      <h2 class="section-title">Skills</h2>
+      <div class="skills-grid">
+        <div class="skill">
+          <div class="skill-head">
+            <strong>HTML &amp; CSS</strong><span>90%</span>
+          </div>
+          <div class="bar"><span style="width:90%"></span></div>
+        </div>
+        <div class="skill">
+          <div class="skill-head">
+            <strong>JavaScript</strong><span>85%</span>
+          </div>
+          <div class="bar"><span style="width:85%"></span></div>
+        </div>
+        <div class="skill">
+          <div class="skill-head">
+            <strong>React</strong><span>75%</span>
+          </div>
+          <div class="bar"><span style="width:75%"></span></div>
+        </div>
+        <div class="skill">
+          <div class="skill-head">
+            <strong>UI / UX</strong><span>80%</span>
+          </div>
+          <div class="bar"><span style="width:80%"></span></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects" class="section">
+      <h2 class="section-title">Projects</h2>
+      <div class="cards">
+        <article class="card">
+          <img src="/mnt/data/IMG_08073383-CCFA-4DAF-9262-942F063BFCA2.jpeg" alt="Project 1" />
+          <h3>Portfolio Website</h3>
+          <p>A polished personal site with a static CMS and animations.</p>
+          <a class="link" href="#">View Project →</a>
+        </article>
+
+        <article class="card">
+          <img src="/mnt/data/IMG_08073383-CCFA-4DAF-9262-942F063BFCA2.jpeg" alt="Project 2" />
+          <h3>Landing Page UI</h3>
+          <p>Marketing landing page with complex responsive interactions.</p>
+          <a class="link" href="#">View Project →</a>
+        </article>
+
+        <article class="card">
+          <img src="/mnt/data/IMG_08073383-CCFA-4DAF-9262-942F063BFCA2.jpeg" alt="Project 3" />
+          <h3>Accessible Components</h3>
+          <p>Design system components built with accessibility and testing in mind.</p>
+          <a class="link" href="#">View Project →</a>
+        </article>
+      </div>
+    </section>
+
+    <!-- Blogs -->
+    <section id="blogs" class="section">
+      <h2 class="section-title">Blogs</h2>
+      <div class="blog-list">
+        <article class="blog">
+          <h3>Design systems: starting small</h3>
+          <p class="muted">Feb 12, 2025 — 5 min read</p>
+          <p>Intro to building reusable UI libraries and how to bootstrap a tiny design system.</p>
+          <a class="link" href="#">Read →</a>
+        </article>
+
+        <article class="blog">
+          <h3>Performance budgeting for beginners</h3>
+          <p class="muted">Jan 8, 2025 — 7 min read</p>
+          <p>Simple techniques to keep your pages fast.</p>
+          <a class="link" href="#">Read →</a>
+        </article>
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="section">
+      <h2 class="section-title">Contact</h2>
+      <div class="contact-grid">
+        <div>
+          <h3>Get in touch</h3>
+          <p>Email: <a href="mailto:may@example.com">may@example.com</a></p>
+          <p>Address: 123 Example Street, London, UK</p>
+          <p>Phone: +44 7123 456789</p>
+        </div>
+
+        <form id="contactForm" class="contact-form">
+          <label>
+            <span>Name</span>
+            <input type="text" name="name" required />
+          </label>
+
+          <label>
+            <span>Email</span>
+            <input type="email" name="email" required />
+          </label>
+
+          <label>
+            <span>Message</span>
+            <textarea name="message" rows="5" required></textarea>
+          </label>
+
+          <!-- Formspree example endpoint (replace with your own or handle server-side) -->
+          <input type="hidden" name="_subject" value="New contact from portfolio" />
+          <button type="submit" class="btn">Send Message</button>
+          <p id="formStatus" class="muted" aria-live="polite"></p>
+        </form>
+      </div>
+    </section>
+
+    <footer class="site-footer">
+      <p>Built with ❤️ — sample site. Replace content with your own.</p>
+    </footer>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
