--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
             <li>Interests: UI design, animations, UX research</li>
           </ul>
         </div>
-        <div class="about-img">
-          <img src="/mnt/data/IMG_08073383-CCFA-4DAF-9262-942F063BFCA2.jpeg" alt="About image" />
+        <div class="hero">
+          <img src="assets/img/myphoto.jpeg" class="hero-img" alt="My Photo" />
+          <h1>Prineet Kaur</h1>
+          
         </div>
       </div>
     </section>
