--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>My Portfolio</title>
+  <title>My Techfolio</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="theme-color" content="#ff6fa3" />
 </head>
@@ -14,7 +14,7 @@
     <div class="profile">
       <img src="/mnt/data/IMG_08073383-CCFA-4DAF-9262-942F063BFCA2.jpeg" alt="Profile" />
       <h2>Prineet Kaur</h2>
-      <p class="role">Technical Product Enabler and Communicator</p>
+      <p class="role">Tech Product Enabler and Communicator</p>
     </div>
 
     <nav class="nav">
@@ -46,8 +46,11 @@
         </div>
       </div>
       <div class="hero-right">
-        <!-- background photo shows via CSS using the same image; also include small overlay -->
-        <div class="photo-credit">Photo placeholder</div>
+        <!-- background photo shows via CSS using the same image; also include small overlay 
+        <div class="photo-credit">Photo placeholder</div> -->
+      <img src="assets/img/myphoto.jpg" class="hero-img" alt="My Photo" />
+      <h1>Prineet Kaur</h1>
+        
       </div>
     </section>
 
