--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
             I enjoy turning ideas into pixel-perfect, fast interfaces.
           </p>
           <ul>
-            <li>Location: London, UK</li>
+            <li>Location: Paris, FRANCE</li>
             <li>Availability: Open to work</li>
-            <li>Interests: UI design, animations, UX research</li>
+            <li>Interests: DevOps, Infra, Observability, DevEx</li>
           </ul>
         </div>
-          <div class="about-img">
+      <!--     <div class="about-img">
           <img src="/mnt/data/IMG_08073383-CCFA-4DAF-9262-942F063BFCA2.jpeg" alt="About image" />
+      -->
           
         </div>
       </div>
