--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </div>
       </div>
       <div class="hero-right">
-        <!-- background photo shows via CSS using the same image; also include small overlay 
-        <div class="photo-credit">Photo placeholder</div> -->
+        <!-- background photo shows via CSS using the same image; also include a small overlay -->
+        <div class="photo-credit">Photo placeholder</div> 
       <img src="assets/img/myphoto.jpg" class="hero-img" alt="My Photo" />
       <h1>Prineet Kaur</h1>
         
