--- a/index.html
+++ b/index.html
@@ -68,12 +68,10 @@
             <li>Availability: Open to work</li>
             <li>Interests: DevOps, Infra, Observability, DevEx</li>
           </ul>
-        </div>
-      <!--     <div class="about-img">
-          <img src="/mnt/data/IMG_08073383-CCFA-4DAF-9262-942F063BFCA2.jpeg" alt="About image" />
-      -->
-          
-        </div>
+     <!--   </div>
+           <div class="about-img">
+          <img src="/mnt/data/IMG_08073383-CCFA-4DAF-9262-942F063BFCA2.jpeg" alt="About image" />   
+        </div>  -->
       </div>
     </section>
 
