--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           <a class="btn-outline" href="#contact">Contact Me</a>
         </div>
       </div>
-      <div class="hero-right">
+      <div class="hero">
         <!-- background photo shows via CSS using the same image; also include a small overlay -->
         <div class="photo-credit">Photo placeholder</div> 
-      <img src="assets/img/myphoto.jpg" class="hero-img" alt="My Photo" />
+      <img src="assets/img/myphoto.jpeg" class="hero-img" alt="My Photo" />
       <h1>Prineet Kaur</h1>
         
       </div>
