--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Left Sidebar -->
   <aside class="sidebar" id="sidebar">
     <div class="profile">
-      <img src="/mnt/data/IMG_08073383-CCFA-4DAF-9262-942F063BFCA2.jpeg" alt="Profile" />
+      <img src="assets/img/mylogo.jpeg" alt="Profile" />
       <h2>Prineet Kaur</h2>
       <p class="role">Tech Product Enabler and Communicator</p>
     </div>
