--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="home" class="hero">
       <div class="hero-left">
         <h1 class="name">Hi, I'm <span class="accent">Prineet</span></h1>
-        <h2 class="typing">I'm a <span id="typed"></span><span class="cursor">|</span></h2>
+        <h2 class="typing">I'm a Technical Product Communicator<span id="typed"></span><span class="cursor">|</span></h2>
         <p class="hero-desc">I create beautiful, responsive websites and delightful user experiences.</p>
         <div class="hero-ctas">
           <a class="btn" href="#projects">View Projects</a>
@@ -182,9 +182,9 @@
       <div class="contact-grid">
         <div>
           <h3>Get in touch</h3>
-          <p>Email: <a href="mailto:may@example.com">may@example.com</a></p>
-          <p>Address: 123 Example Street, London, UK</p>
-          <p>Phone: +44 7123 456789</p>
+          <p>Email: <a href="mailto:may@example.com">bhurji.pk@gmail.com</a></p>
+          <p>Address: Paris, France</p>
+          <p>Phone: +33 758349129</p>
         </div>
 
         <form id="contactForm" class="contact-form">
@@ -212,7 +212,7 @@
     </section>
 
     <footer class="site-footer">
-      <p>Built with ❤️ — sample site. Replace content with your own.</p>
+      <p>Built with ❤️ PK Techfolio </p>
     </footer>
   </main>
 
