--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     </div>
   </aside>
 
-  <!-- Main content (right side) -->
+  <!-- Main content (right side) 
   <main class="main">
     <!-- Hero / Home -->
     <section id="home" class="hero">
       <div class="hero-left">
         <h1 class="name">Hi, I'm <span class="accent">Prineet</span></h1>
-        <h2 class="typing">I'm a Technical Product Communicator<span id="typed"></span><span class="cursor">|</span></h2>
+        <h2 class="typing">I'm a <span id="typed"></span><span class="cursor">|</span></h2>
         <p class="hero-desc">I create beautiful, responsive websites and delightful user experiences.</p>
         <div class="hero-ctas">
           <a class="btn" href="#projects">View Projects</a>
@@ -49,10 +49,26 @@
         <!-- background photo shows via CSS using the same image; also include a small overlay
         <div class="photo-credit">Photo placeholder</div>  -->
       <img src="assets/img/myphoto.jpeg" class="hero-img" alt="My Photo" />
-      <h1>Prineet Kaur</h1>
-        
+      <h1>Prineet Kaur</h1>    
       </div>
+    </section> -->
+
+<!-- NEW -->
+
+        <!-- Hero Section -->
+    <section id="home" class="hero section dark-background">
+
+      <img src="assets/img/myphoto.png" alt="" data-aos="fade-in" class="">
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <h2>Prineet Kaur</h2>
+        <p>I'm <span class="typed" data-typed-items="Technical Product Enabler, Technical Product Communicator, Devloper Advocate">Technical Delivery Manager</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+      </div>
+
     </section>
+
+<!-- NEW -->
+    
 
     <!-- About -->
     <section id="about" class="section">
