--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <!-- Left Sidebar -->
   <aside class="sidebar" id="sidebar">
     <div class="profile">
-      <img src="assets/img/mylogo.jpeg" alt="Profile" />
+      <img src="assets/img/mylogo.jpeg" alt="" class="img-fluid rounded-circle">
       <h2>Prineet Kaur</h2>
       <p class="role">Tech Product Enabler and Communicator</p>
     </div>
+    
 
     <nav class="nav">
       <a href="#home" class="nav-link active">Home</a>
