--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
     </div>
   </aside>
 
-  <!-- Main content (right side) 
+  <!-- Main content (right side) -->
   <main class="main">
     <!-- Hero / Home -->
-    <section id="home" class="hero">
+    <section id="home" class="hero section dark-background">
+        <img src="assets/img/myphoto.png" alt="" data-aos="fade-in" class="">
       <div class="hero-left">
-        <h1 class="name">Hi, I'm <span class="accent">Prineet</span></h1>
-        <h2 class="typing">I'm a <span id="typed"></span><span class="cursor">|</span></h2>
+        <h1 class="name">Hi, I'm <span class="accent">Prineet Kaur</span></h1>
+   <!--     <h2 class="typing">I'm a <span id="typed"></span><span class="cursor">|</span></h2> -->
+        <p>I'm <span class="typed" data-typed-items=" Technical Product Enabler, Technical Product Communicator, Devloper Advocate">Technical Delivery Manager</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
         <p class="hero-desc">I create beautiful, responsive websites and delightful user experiences.</p>
         <div class="hero-ctas">
           <a class="btn" href="#projects">View Projects</a>
@@ -52,23 +54,7 @@
       <img src="assets/img/myphoto.jpeg" class="hero-img" alt="My Photo" />
       <h1>Prineet Kaur</h1>    
       </div>
-    </section> -->
-
-<!-- NEW -->
-
-        <!-- Hero Section -->
-    <section id="home" class="hero section dark-background">
-
-      <img src="assets/img/myphoto.png" alt="" data-aos="fade-in" class="">
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Prineet Kaur</h2>
-        <p>I'm <span class="typed" data-typed-items="Technical Product Enabler, Technical Product Communicator, Devloper Advocate">Technical Delivery Manager</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-      </div>
-
-    </section>
-
-<!-- NEW -->
+    </section> 
     
 
     <!-- About -->
