--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
   <main class="main">
     <!-- Hero / Home -->
     <section id="home" class="hero section dark-background">
-        <img src="assets/img/myphoto.png" alt="" data-aos="fade-in" class="">
+        <img src="assets/img/myphoto.jpeg" alt="" data-aos="fade-in" class="">
       <div class="hero-left">
         <h1 class="name">Hi, I'm <span class="accent">Prineet Kaur</span></h1>
-   <!--     <h2 class="typing">I'm a <span id="typed"></span><span class="cursor">|</span></h2> -->
-        <p>I'm <span class="typed" data-typed-items=" Technical Product Enabler, Technical Product Communicator, Devloper Advocate">Technical Delivery Manager</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+         <h2 class="typing">I'm a <span class="typed" data-typed-items=" Technical Product Enabler, Technical Product Communicator, Developer Advocate"></span><span class="cursor">|</span></h2> 
+    <!--     <p>I'm <span class="typed" data-typed-items=" Technical Product Enabler, Technical Product Communicator, Devloper Advocate">Technical Delivery Manager</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p> -->
         <p class="hero-desc">I create beautiful, responsive websites and delightful user experiences.</p>
         <div class="hero-ctas">
           <a class="btn" href="#projects">View Projects</a>
