--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <section id="home" class="hero section dark-background">
         <img src="assets/img/myphoto.jpeg" alt="" data-aos="fade-in" class="">
       <div class="hero-left">
-        <p>Hi, I'm <span class="accent">Prineet Kaur</span></h1>
-         <p>I'm a <span class="typing" data-typed-items=" Technical Product Enabler, Technical Product Communicator, Developer Advocate"></span><span class="typed-cursor typed-cursor--blink">|</span></h2> 
+        <p>Hi, I'm <span class="accent">Prineet Kaur</span><p>
+         <p>I'm a <span class="typing" data-typed-items=" Technical Product Enabler, Technical Product Communicator, Developer Advocate"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><p> 
     <!--     <p>I'm <span class="typed" data-typed-items=" Technical Product Enabler, Technical Product Communicator, Devloper Advocate">Technical Delivery Manager</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p> -->
         <p class="hero-desc"> I love to write about DevOps, Infra, Observability, DevEx, and AI's impact on them ✍️ ✨ 🚀</p>
         <div class="hero-ctas">
