--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         <img src="assets/img/myphoto.jpeg" alt="" data-aos="fade-in" class="">
       <div class="hero-left">
         <h1>Hi, I'm <span class="accent">Prineet Kaur</span></h1>
-         <h2>I'm a <span class="typing" data-typed-items=" Technical Product Enabler, Technical Product Communicator, Developer Advocate"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></h2> 
-    <!--     <p>I'm <span class="typed" data-typed-items=" Technical Product Enabler, Technical Product Communicator, Devloper Advocate">Technical Delivery Manager</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p> -->
+         <h2>I'm a <span class="typing" data-typed-items=" Technical Product Enabler, Technical Product Communicator, Developer Advocate"></span><span class="typed-cursor typed-cursor--blink"></span></h2> 
         <p class="hero-desc"> I love to write about DevOps, Infra, Observability, DevEx, and AI's impact on them ✍️ ✨ 🚀</p>
         <div class="hero-ctas">
           <a class="btn" href="#projects">View Projects</a>
