--- a/index.html
+++ b/index.html
@@ -33,25 +33,35 @@
     </div>
   </aside>
 
-  <!-- Main content (right side) -->
-  <main class="main">
-    <!-- Hero / Home -->
-    <section id="home" class="hero section dark-background">
-        <img src="assets/img/myphoto.jpeg" alt="" data-aos="fade-in" class="">
-      <div class="hero-left">
-        <h1>Hi, I'm <span class="accent">Prineet Kaur</span></h1>
-         <h2>I'm a <span class="typing" data-typed-items=" Technical Product Enabler, Technical Product Communicator, Developer Advocate"></span><span class="typed-cursor typed-cursor--blink"></span></h2> 
-        <p class="hero-desc"> I love to write about DevOps, Infra, Observability, DevEx, and AI's impact on them ✍️ ✨ 🚀</p>
-        <div class="hero-ctas">
-          <a class="btn" href="#projects">View Projects</a>
-          <a class="btn-outline" href="#contact">Contact Me</a>
-        </div>
-      </div>
-      <div class="hero">
-        <!-- background photo shows via CSS using the same image; also include a small overlay
-        <div class="photo-credit">Photo placeholder</div>  -->
-      </div>
-    </section> 
+<!-- Hero / Home -->
+<section id="home" class="hero section">
+
+  <div class="hero-bg"></div> <!-- background image -->
+  <div class="hero-overlay"></div> <!-- dark overlay -->
+
+  <div class="hero-content" data-aos="fade-up">
+
+    <h1>Hi, I'm <span class="accent">Prineet Kaur</span></h1>
+
+    <h2>
+      I'm a 
+      <span class="typed"
+        data-typed-items="Technical Product Enabler, Technical Product Communicator, Developer Advocate">
+      </span>
+    </h2>
+
+    <p class="hero-desc">
+      I love to write about DevOps, Infra, Observability, DevEx, and AI's impact on them ✍️ ✨ 🚀
+    </p>
+
+    <div class="hero-ctas">
+      <a href="#projects" class="btn">View Projects</a>
+      <a href="#contact" class="btn-outline">Contact Me</a>
+    </div>
+
+  </div>
+
+</section>
     
 
     <!-- About -->
