--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2>
           I'm a
           <span class="typed"
-            data-typed-items="Technical Product Enabler, Technical Product Communicator, Developer Advocate"></span>
+            data-typed-items="Technical Product Communicator, Experienced Program Manager, Developer Advocate"></span>
         </h2>
 
         <p class="hero-desc">
