--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Sidebar -->
   <aside class="sidebar">
     <div class="profile">
-      <img src="assets/img/mylogo.jpg" alt="Profile Photo">
+      <img src="images/mylogo.jpg" alt="Profile Photo">
       <h2>Prineet Kaur</h2>
       <p class="role">Tech Product Enabler and Communicator</p>
     </div>
@@ -74,7 +74,7 @@
       <h2 class="section-title">About</h2>
       <p>
         I’m a passionate developer and product communicator with experience across DevOps, Developer Experience,
-        Observability, and infrastructure platforms. I love simplifying complex tech so teams can adopt, implement, and
+        Observability and infrastructure platforms. I love simplifying complex tech so teams can adopt, implement, and
         innovate faster.
       </p>
     </section>
@@ -99,7 +99,7 @@
         <div class="resume-item">
           <h3>BSc Computer Science</h3>
           <span class="muted">2017 — 2020</span>
-          <p>Graduated with focus on software engineering and cloud systems.</p>
+          <p>Graduated with a focus on software engineering and cloud systems.</p>
         </div>
 
       </div>
