--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Sidebar -->
   <aside class="sidebar">
     <div class="profile">
-      <img src="images/mylogo.jpg" alt="Profile Photo">
+      <img src="assets/img/mylogo.jpg" alt="Profile Photo">
       <h2>Prineet Kaur</h2>
       <p class="role">Tech Product Enabler and Communicator</p>
     </div>
