--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prineet Kaur Portfolio</title>
+  <title>Prineet Techfolio</title>
 
   <link rel="stylesheet" href="style.css">
 
@@ -48,11 +48,11 @@
 
       <div class="hero-content">
 
-        <h1>Hi, I'm <span class="accent">Prineet Kaur</span></h1>
+        <h1><span class="accent">Prineet Kaur</span></h1>
 
         <h2>
           I'm a
-          <span class="typed"
+          <span class="typed-cursor typed-cursor--blink"
             data-typed-items="Technical Product Communicator, Experienced Program Manager, Developer Advocate"></span>
         </h2>
 
