--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <h2>
           I'm a
-          <span class="typed-cursor typed-cursor--blink"
+          <span class="typed"
             data-typed-items="Technical Product Communicator, Experienced Program Manager, Developer Advocate"></span>
         </h2>
 
