--- a/index.html
+++ b/index.html
@@ -196,12 +196,12 @@
         <div class="contact-info">
           <h3>Get in touch</h3>
 
-          <p><strong>Email:</strong> <a href="mailto:yourgmail@gmail.com">yourgmail@gmail.com</a></p>
-          <p><strong>Location:</strong> London, UK</p>
+          <p><strong>Email:</strong> <a href="mailto:bhurji.pk@gmail.com">bhurji.pk@gmail.com</a></p>
+          <p><strong>Location:</strong> Paris, France</p>
 
           <br>
 
-          <a href="mailto:yourgmail@gmail.com" class="btn contact-btn">Let's Connect</a>
+          <a href="mailto:bhurji.pk@gmail.com" class="btn contact-btn">Let's Connect</a>
         </div>
 
         <div class="contact-map">
