--- a/index.html
+++ b/index.html
@@ -187,32 +187,37 @@
       </div>
     </section>
 
-    <!-- CONTACT — FINAL VERSION MATCHING ANSABABY -->
-    <section id="contact" class="section contact-section">
-      <h2 class="section-title">Contact</h2>
+    <!-- CONTACT — FINAL VERSION -->
+<section id="contact" class="section contact-section">
+  <h2 class="section-title">Contact</h2>
 
-      <div class="contact-container">
+  <div class="contact-wrapper">
 
-        <div class="contact-info">
-          <h3>Get in touch</h3>
+    <!-- LEFT CARD -->
+    <div class="contact-card">
+      <h3>Get in touch</h3>
 
-          <p><strong>Email:</strong> <a href="mailto:bhurji.pk@gmail.com">bhurji.pk@gmail.com</a></p>
-          <p><strong>Location:</strong> Paris, France</p>
+      <p><strong>Email:</strong> 
+        <a href="mailto:bhurji.pk@gmail.com">bhurji.pk@gmail.com</a>
+      </p>
 
-          <br>
+      <p><strong>Location:</strong> Paris, France</p>
 
-          <a href="mailto:bhurji.pk@gmail.com" class="btn contact-btn">Let's Connect</a>
-        </div>
+      <a href="mailto:bhurji.pk@gmail.com" class="btn contact-btn">Let's Connect</a>
+    </div>
 
-        <div class="contact-map">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19801.853008410625!2d-0.1357!3d51.509865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b3339a2!2sLondon!5e0!3m2!1sen!2suk!4v1700000000"
-            width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
-          </iframe>
-        </div>
+    <!-- RIGHT MAP BOX -->
+    <div class="contact-map-box">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.893518924692!2d2.3522219!3d48.856614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66df7e0f70001%3A0x40b82c3688b5040!2sParis%2C%20France!5e0!3m2!1sen!2sfr!4v1700000000000"
+        allowfullscreen="" loading="lazy">
+      </iframe>
+    </div>
 
-      </div>
-    </section>
+  </div>
+</section>
+
+    
 
     <footer class="site-footer">
       <p>PK Techfolio...Built with ❤️ using Github.</p>
