--- a/index.html
+++ b/index.html
@@ -187,37 +187,81 @@
       </div>
     </section>
 
-    <!-- CONTACT — FINAL VERSION -->
-<section id="contact" class="section contact-section">
-  <h2 class="section-title">Contact</h2>
+<!-- CONTACT — REPLACED WITH EXACT STYLE FROM ANSA SITE -->
+<section id="contact" class="contact section light-background">
 
-  <div class="contact-wrapper">
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Contact</h2>
+  </div>
 
-    <!-- LEFT CARD -->
-    <div class="contact-card">
-      <h3>Get in touch</h3>
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-      <p><strong>Email:</strong> 
-        <a href="mailto:bhurji.pk@gmail.com">bhurji.pk@gmail.com</a>
-      </p>
+    <div class="row gy-4 container">
 
-      <p><strong>Location:</strong> Paris, France</p>
+      <!-- LEFT SECTION -->
+      <div class="col-lg-5 container">
+        <div class="info-wrap">
 
-      <a href="mailto:bhurji.pk@gmail.com" class="btn contact-btn">Let's Connect</a>
-    </div>
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+            <i class="bi bi-geo-alt flex-shrink-0"></i>
+            <div>
+              <h3>Address</h3>
+              <p>Paris, France</p>
+            </div>
+          </div>
 
-    <!-- RIGHT MAP BOX -->
-    <div class="contact-map-box">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.893518924692!2d2.3522219!3d48.856614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66df7e0f70001%3A0x40b82c3688b5040!2sParis%2C%20France!5e0!3m2!1sen!2sfr!4v1700000000000"
-        allowfullscreen="" loading="lazy">
-      </iframe>
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+            <i class="bi bi-envelope flex-shrink-0"></i>
+            <div>
+              <h3>Email Me</h3>
+              <p>bhurji.pk@gmail.com</p>
+            </div>
+          </div>
+
+          <div style="overflow:hidden;max-width:100%;width: 100%;height:270px;">
+            <div id="embed-map" style="height:100%; width:100%;max-width:100%;">
+              <iframe style="height:100%;width:100%;border:0;" frameborder="0"
+                src="https://www.google.com/maps/embed/v1/place?q=Paris,+France&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+              </iframe>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <!-- RIGHT SECTION -->
+      <div class="col-lg-7 container">
+        <div class="info-wrap">
+          <div class="section-title" data-aos="fade-up">
+            <h2>Get in Touch</h2>
+          </div>
+
+          <div style="
+            text-align: center;
+            border: 2px solid;
+            border-image: linear-gradient(to right, #3495EB, #00FFA1);
+            border-image-slice: 1;
+            padding: 59px;
+          ">
+            <p style="font-size: 15px; line-height: 28px; margin-bottom: 30px; margin-top: 12px;">
+              My inbox is always open. Whether you have a question or just want to say hi,
+              I’ll try my best to get back to you! <br><br>
+              Let's connect and discuss.
+            </p>
+
+            <a href="mailto:bhurji.pk@gmail.com"
+              style="display: inline-block; padding: 15px 30px; background-color: var(--accent-color); color: white; text-decoration: none; font-size: 18px; border-radius: 5px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: background-color 0.3s;">
+              Let's connect
+            </a>
+          </div>
+
+        </div>
+      </div>
+
     </div>
 
   </div>
 </section>
-
-    
 
     <footer class="site-footer">
       <p>PK Techfolio...Built with ❤️ using Github.</p>
