--- a/index.html
+++ b/index.html
@@ -187,82 +187,91 @@
       </div>
     </section>
 
-<!-- CONTACT — REPLACED WITH EXACT STYLE FROM ANSA SITE -->
-<section id="contact" class="contact section light-background">
+<!-- CONTACT SECTION -->
+<section id="contact" class="section contact-section">
+  <h2 class="section-title">Contact</h2>
 
-  <div class="container section-title" data-aos="fade-up">
-    <h2>Contact</h2>
-  </div>
+  <div class="contact-wrapper" style="
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 40px;
+      align-items: start;
+  ">
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-    <div class="row gy-4 container">
-
-      <!-- LEFT SECTION -->
-      <div class="col-lg-5 container">
-        <div class="info-wrap">
-
-          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
-            <i class="bi bi-geo-alt flex-shrink-0"></i>
-            <div>
-              <h3>Address</h3>
-              <p>Paris, France</p>
-            </div>
-          </div>
-
-          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-            <i class="bi bi-envelope flex-shrink-0"></i>
-            <div>
-              <h3>Email Me</h3>
-              <p>bhurji.pk@gmail.com</p>
-            </div>
-          </div>
-
-          <div style="overflow:hidden;max-width:100%;width: 100%;height:270px;">
-            <div id="embed-map" style="height:100%; width:100%;max-width:100%;">
-              <iframe style="height:100%;width:100%;border:0;" frameborder="0"
-                src="https://www.google.com/maps/embed/v1/place?q=Paris,+France&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
-              </iframe>
-            </div>
-          </div>
-
-        </div>
+    <!-- LEFT COLUMN -->
+    <div class="contact-left" style="
+        background: #f8f8f8;
+        padding: 30px;
+        border-radius: 10px;
+    ">
+      <div class="info-item" style="margin-bottom: 25px;">
+        <h3 style="margin-bottom: 5px;">Address</h3>
+        <p>Paris, France</p>
       </div>
 
-      <!-- RIGHT SECTION -->
-      <div class="col-lg-7 container">
-        <div class="info-wrap">
-          <div class="section-title" data-aos="fade-up">
-            <h2>Get in Touch</h2>
-          </div>
-
-          <div style="
-            text-align: center;
-            border: 2px solid;
-            border-image: linear-gradient(to right, #3495EB, #00FFA1);
-            border-image-slice: 1;
-            padding: 59px;
-          ">
-            <p style="font-size: 15px; line-height: 28px; margin-bottom: 30px; margin-top: 12px;">
-              My inbox is always open. Whether you have a question or just want to say hi,
-              I’ll try my best to get back to you! <br><br>
-              Let's connect and discuss.
-            </p>
-
-            <a href="mailto:bhurji.pk@gmail.com"
-              style="display: inline-block; padding: 15px 30px; background-color: var(--accent-color); color: white; text-decoration: none; font-size: 18px; border-radius: 5px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: background-color 0.3s;">
-              Let's connect
-            </a>
-          </div>
-
-        </div>
+      <div class="info-item" style="margin-bottom: 25px;">
+        <h3 style="margin-bottom: 5px;">Email Me</h3>
+        <p>bhurji.pk@gmail.com</p>
       </div>
 
+      <div style="overflow:hidden;width:100%;border-radius:10px;">
+        <iframe 
+          style="width:100%;height:250px;border:0;border-radius:10px;"
+          loading="lazy"
+          allowfullscreen
+          src="https://www.google.com/maps/embed/v1/place?q=Paris,+France&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+        </iframe>
+      </div>
+    </div>
+
+    <!-- RIGHT COLUMN -->
+    <div class="contact-right" style="
+        background: #f8f8f8;
+        padding: 30px;
+        border-radius: 10px;
+        border: 2px solid;
+        border-image: linear-gradient(to right, #3495EB, #00FFA1) 1;
+        text-align: center;
+    ">
+      <h3 style="margin-bottom: 20px;">Get in Touch</h3>
+
+      <p style="line-height: 26px; margin-bottom: 25px;">
+        My inbox is always open. Whether you have a question or just want to say hi,
+        I’ll try my best to get back to you! <br><br>
+        Let's connect and discuss.
+      </p>
+
+      <a href="mailto:bhurji.pk@gmail.com"
+        style="
+          display: inline-block;
+          padding: 12px 28px;
+          background: var(--accent-color);
+          color: white;
+          font-size: 18px;
+          border-radius: 6px;
+          text-decoration: none;
+          box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+        ">
+        Let's connect
+      </a>
     </div>
 
   </div>
 </section>
 
+<!-- Make it responsive -->
+<style>
+@media (max-width: 850px) {
+  .contact-wrapper {
+    grid-template-columns: 1fr !important;
+  }
+}
+</style>
+
+
+
+
+    
     <footer class="site-footer">
       <p>PK Techfolio...Built with ❤️ using Github.</p>
     </footer>
