--- a/index.html
+++ b/index.html
@@ -188,22 +188,26 @@
     </section>
 
 <!-- CONTACT SECTION -->
+
 <section id="contact" class="section contact-section">
   <h2 class="section-title">Contact</h2>
 
   <div class="contact-wrapper" style="
-      display: grid;
-      grid-template-columns: 1fr 1fr;
+      display: flex;
       gap: 40px;
-      align-items: start;
+      align-items: stretch;     /* makes equal height */
   ">
 
     <!-- LEFT COLUMN -->
     <div class="contact-left" style="
-        background: #f8f8f8;
+        flex: 1;
+        background: #111;           /* dark background */
         padding: 30px;
-        border-radius: 10px;
+        border-radius: 12px;
+        color: white;               /* white text */
+        box-shadow: 0 0 20px rgba(0,0,0,0.4);
     ">
+
       <div class="info-item" style="margin-bottom: 25px;">
         <h3 style="margin-bottom: 5px;">Address</h3>
         <p>Paris, France</p>
@@ -214,7 +218,7 @@
         <p>bhurji.pk@gmail.com</p>
       </div>
 
-      <div style="overflow:hidden;width:100%;border-radius:10px;">
+      <div style="overflow:hidden;width:100%;border-radius:10px;margin-top:20px;">
         <iframe 
           style="width:100%;height:250px;border:0;border-radius:10px;"
           loading="lazy"
@@ -226,19 +230,29 @@
 
     <!-- RIGHT COLUMN -->
     <div class="contact-right" style="
-        background: #f8f8f8;
+        flex: 1;
+        background: #111;               /* dark */
         padding: 30px;
-        border-radius: 10px;
+        border-radius: 12px;
         border: 2px solid;
         border-image: linear-gradient(to right, #3495EB, #00FFA1) 1;
         text-align: center;
+        color: white;                   /* white text */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;        /* vertically centered text */
+        box-shadow: 0 0 20px rgba(0,0,0,0.4);
     ">
       <h3 style="margin-bottom: 20px;">Get in Touch</h3>
 
       <p style="line-height: 26px; margin-bottom: 25px;">
-        My inbox is always open. Whether you have a question or just want to say hi,
-        I’ll try my best to get back to you! <br><br>
-        Let's connect and discuss.
+        Are you too keen on using AI and Data Technologies to build Innovative Products?
+
+        Leveraging the power of AI to improve Developer Experiences & Productivity?
+
+        Together we can create Product Solutions that Customers will Love...!
+
+        Let's Talk!
       </p>
 
       <a href="mailto:bhurji.pk@gmail.com"
@@ -250,7 +264,7 @@
           font-size: 18px;
           border-radius: 6px;
           text-decoration: none;
-          box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+          box-shadow: 0 4px 10px rgba(0,0,0,0.3);
         ">
         Let's connect
       </a>
@@ -259,15 +273,13 @@
   </div>
 </section>
 
-<!-- Make it responsive -->
 <style>
 @media (max-width: 850px) {
   .contact-wrapper {
-    grid-template-columns: 1fr !important;
+    flex-direction: column !important;
   }
 }
 </style>
-
 
 
 
