--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     <nav class="nav">
       <a href="#home" class="nav-link"><img class="icon" src="assets/icons/home.png"> Home</a>
-      <a href="#about" class="nav-link"><img class="icon" src="assets/icons/user.png"> About</a>
+      <a href="#about" class="nav-link"><img class="icon" src="assets/icons/about.png"> About</a>
       <a href="#resume" class="nav-link"><img class="icon" src="assets/icons/resume.png"> Resume</a>
       <a href="#skills" class="nav-link"><img class="icon" src="assets/icons/skills.png"> Skills</a>
-      <a href="#projects" class="nav-link"><img class="icon" src="assets/icons/work.png"> Projects</a>
-      <a href="#blogs" class="nav-link"><img class="icon" src="assets/icons/blog.png"> Blogs</a>
+      <a href="#projects" class="nav-link"><img class="icon" src="assets/icons/projects.png"> Projects</a>
+      <a href="#blogs" class="nav-link"><img class="icon" src="assets/icons/blogs.png"> Blogs</a>
       <a href="#contact" class="nav-link"><img class="icon" src="assets/icons/contact.png"> Contact</a>
     </nav>
     
