--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
     <!-- SOCIAL ICONS -->
     <div class="social-icons">
-      <a href="https://linkedin.com" target="_blank"><img src="assets/icons/linkedin.png"></a>
-      <a href="https://github.com" target="_blank"><img src="assets/icons/github.png"></a>
-      <a href="https://medium.com" target="_blank"><img src="assets/icons/medium.png"></a>
-      <a href="https://substack.com" target="_blank"><img src="assets/icons/substack.png"></a>
-      <a href="https://instagram.com" target="_blank"><img src="assets/icons/instagram.png"></a>
+      <a href="https://linkedin.com" target="https://www.linkedin.com/in/prineetkaur/"><img src="assets/icons/linkedin.png"></a>
+      <a href="https://github.com" target="https://github.com/PrineetKaur"><img src="assets/icons/github.png"></a>
+      <a href="https://medium.com" target="https://medium.com/@bhurji.pk"><img src="assets/icons/medium.png"></a>
+      <a href="https://substack.com" target="https://substack.com/@prineetkaur?"><img src="assets/icons/substack.png"></a>
+      <a href="https://instagram.com" target="https://www.instagram.com/prineet.kaur/"><img src="assets/icons/instagram.png"></a>
       <a href="mailto:bhurji.pk@gmail.com"><img src="assets/icons/gmail.png"></a>
     </div>
 
