--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <aside class="sidebar">
     <div class="profile">
       <img src="assets/img/mylogo.jpg" alt="Profile Photo">
-      <h2>Prineet Kaur</h2>
+  <!--     <h2>Prineet Kaur</h2>  -->
       <p class="role">Tech Product Enabler and Communicator</p>
     </div>
 
