--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <aside class="sidebar">
     <div class="profile">
       <img src="assets/img/mylogo.jpg" alt="Profile Photo">
-  <!--     <h2>Prineet Kaur</h2>  -->
-      <p class="role">Tech Product Enabler and Communicator</p>
+  <!--     <h2>Prineet Kaur</h2> 
+      <p class="role">Tech Product Enabler and Communicator</p>  -->
     </div>
 
     <!-- SOCIAL ICONS -->
