--- a/index.html
+++ b/index.html
@@ -18,28 +18,35 @@
   <aside class="sidebar">
     <div class="profile">
       <img src="assets/img/mylogo.jpg" alt="Profile Photo">
-  <!--     <h2>Prineet Kaur</h2> 
-      <p class="role">Tech Product Enabler and Communicator</p>  -->
     </div>
 
     <!-- SOCIAL ICONS -->
     <div class="social-icons">
-      <a href="https://www.linkedin.com/in/prineetkaur/" target="https://www.linkedin.com/in/prineetkaur/"><img src="assets/icons/linkedin.png"></a>
-      <a href="https://github.com/PrineetKaur" target="https://github.com/PrineetKaur"><img src="assets/icons/github.png"></a>
-      <a href="https://medium.com/@bhurji.pk" target="https://medium.com/@bhurji.pk"><img src="assets/icons/medium.png"></a>
- <!-- <a href="https://substack.com" target="https://substack.com/@prineetkaur?"><img src="assets/icons/substack.png"></a>  -->
-      <a href="https://www.instagram.com/prineet.kaur/" target="https://www.instagram.com/prineet.kaur/"><img src="assets/icons/instagram.png"></a>
-      <a href="mailto:bhurji.pk@gmail.com"><img src="assets/icons/gmail.png"></a>
+      <a href="https://www.linkedin.com/in/prineetkaur/" target="https://www.linkedin.com/in/prineetkaur/">
+        <img src="assets/icons/linkedin.png" alt="LinkedIn">
+      </a>
+      <a href="https://github.com/PrineetKaur" target="https://github.com/PrineetKaur">
+        <img src="assets/icons/github.png" alt="GitHub">
+      </a>
+      <a href="https://medium.com/@bhurji.pk" target="https://medium.com/@bhurji.pk">
+        <img src="assets/icons/medium.png" alt="Medium">
+      </a>
+      <a href="https://www.instagram.com/prineet.kaur/" target="https://www.instagram.com/prineet.kaur/">
+        <img src="assets/icons/instagram.png" alt="Instagram">
+      </a>
+      <a href="mailto:bhurji.pk@gmail.com">
+        <img src="assets/icons/gmail.png" alt="Gmail">
+      </a>
     </div>
 
     <nav class="nav">
-      <a href="#home" class="nav-link"><img class="icon" src="assets/icons/home.png"> Home</a>
-      <a href="#about" class="nav-link"><img class="icon" src="assets/icons/about.png"> About</a>
-      <a href="#resume" class="nav-link"><img class="icon" src="assets/icons/resume.png"> Resume</a>
-      <a href="#skills" class="nav-link"><img class="icon" src="assets/icons/skills.png"> Skills</a>
-      <a href="#projects" class="nav-link"><img class="icon" src="assets/icons/projects.png"> Projects</a>
-      <a href="#blogs" class="nav-link"><img class="icon" src="assets/icons/blogs.png"> Blogs</a>
-      <a href="#contact" class="nav-link"><img class="icon" src="assets/icons/contact.png"> Contact</a>
+      <a href="#home" class="nav-link"><img class="icon" src="assets/icons/home.png" alt="Home"> Home</a>
+      <a href="#about" class="nav-link"><img class="icon" src="assets/icons/about.png" alt="About"> About</a>
+      <a href="#resume" class="nav-link"><img class="icon" src="assets/icons/resume.png" alt="Resume"> Resume</a>
+      <a href="#skills" class="nav-link"><img class="icon" src="assets/icons/skills.png" alt="Skills"> Skills</a>
+      <a href="#projects" class="nav-link"><img class="icon" src="assets/icons/projects.png" alt="Projects"> Projects</a>
+      <a href="#blogs" class="nav-link"><img class="icon" src="assets/icons/blogs.png" alt="Blogs"> Blogs</a>
+      <a href="#contact" class="nav-link"><img class="icon" src="assets/icons/contact.png" alt="Contact"> Contact</a>
     </nav>
     
     <div class="sidebar-footer">
@@ -49,33 +56,25 @@
 
   <!-- Main Content -->
   <main class="main">
-
-    <!-- HERO -->
     <section id="home" class="hero">
-
       <div class="hero-bg"></div>
       <div class="hero-overlay"></div>
-
       <div class="hero-content">
         <h1><span class="accent">Prineet Kaur</span></h1>
-
         <h2>
           I'm a
-          <span class="typed"
-            data-typed-items="Technical Product Communicator, Experienced Program Manager, Developer Advocate"></span>
+          <span class="typed" data-typed-items="Technical Product Communicator, Experienced Program Manager, Developer Advocate"></span>
         </h2>
-
         <p class="hero-desc">
           I love to write about DevOps, Infra, Observability, DevEx, and AI's impact on them ✍️ ✨ 🚀
         </p>
-
         <div class="hero-ctas">
           <a href="#projects" class="btn">View Projects</a>
           <a href="#contact" class="btn-outline">Contact Me</a>
         </div>
       </div>
-
     </section>
+   
 
     <!-- ABOUT -->
     <section id="about" class="section">
